[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/tutorial/map/background_tutorial.png" type="Texture" id=1]
[ext_resource path="res://assets/Fonts/joystix_monospace_font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/buttons/right_button.png" type="Texture" id=3]
[ext_resource path="res://scripts/tutorial/IntroductionTutorial.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.964706, 0.941176, 0.858824, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color( 1, 1, 1, 0.592157 )
shadow_size = 10
anti_aliasing = false

[sub_resource type="DynamicFont" id=2]
size = 23
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="BackGround" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.727273, 0.75 )
texture = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 0.901961 )
self_modulate = Color( 0, 0, 0, 0.843137 )
margin_right = 1280.0
margin_bottom = 720.0

[node name="text_box" type="Panel" parent="."]
margin_left = 88.0
margin_top = 424.0
margin_right = 672.0
margin_bottom = 692.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="introduction_text" type="RichTextLabel" parent="text_box"]
margin_left = 12.0
margin_top = 12.0
margin_right = 564.0
margin_bottom = 216.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "
"
text = "
"

[node name="back_button" type="TextureButton" parent="text_box"]
margin_left = 44.0
margin_top = 262.0
margin_right = 80.0
margin_bottom = 298.0
rect_rotation = 180.0
texture_normal = ExtResource( 3 )

[node name="next_button" type="TextureButton" parent="text_box"]
margin_left = 540.0
margin_top = 226.0
margin_right = 576.0
margin_bottom = 262.0
texture_normal = ExtResource( 3 )

[connection signal="pressed" from="text_box/back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="text_box/next_button" to="." method="_on_next_button_pressed"]
